--- a/guidebuddy.html
+++ b/guidebuddy.html
@@ -11,11 +11,11 @@
 
 </div>
 <nav>
-    <ul>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Destinations</a></li>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Contact</a></li>
+    <ul class="Nav">
+        <li><a class="active" href="#">About</a></li>
+        <li><a class="active" href="#">Destinations</a></li>
+        <li><a class="active" href="#">Home</a></li>
+        <li><a class="active" href="#">Contact</a></li>
         
     </ul>
 </nav>
