--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GuideBuddy</title>
     <link rel="stylesheet" href="guidebuddy.css">
+<link rel="stylesheet" href="Destinations.html">
 </head>
 <div class="Logo">
     GUIDE BUDDY
@@ -13,7 +14,7 @@
 <nav>
     <ul class="Nav">
         <li><a class="active" href="#">About</a></li>
-        <li><a class="active" href="#">Destinations</a></li>
+        <li><a class="active" href="Destinations.html">Destinations</a></li>
         <li><a class="active" href="#">Home</a></li>
         <li><a class="active" href="#">Contact</a></li>
         
